objects/CT_Quick__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CT Quick</relationshipLabel>
        <relationshipName>CT_Quick</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Avg_Ticket_Price_Event__c</fullName>
        <label>Avg Ticket Price/Event</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CTQ_Account_Creation_Date__c</fullName>
        <label>CTQ Account Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTQ_User_Status__c</fullName>
        <formula>IF( 
AND(NOT(ISBLANK(CTQ_Account_Creation_Date__c)), of_Events_Launched__c=0),"Account Created", 
IF( 
AND(NOT(ISBLANK(CTQ_Account_Creation_Date__c)), of_Events_Launched__c&gt;=1, of_Events_Completed__c=0, of_Tickets_Sold__c=0),"Event Created", 
IF( 
AND(NOT(ISBLANK(CTQ_Account_Creation_Date__c)), of_Events_Launched__c&gt;=1, of_Events_Completed__c=0, of_Tickets_Sold__c&gt;=1),"Tickets Sold", 
IF( 
AND(NOT(ISBLANK(CTQ_Account_Creation_Date__c)), of_Events_Launched__c&gt;=1, of_Events_Completed__c&gt;=1, of_Tickets_Sold__c&gt;=1),"Event Completed", 
IF( 
AND(NOT(ISBLANK(CTQ_Account_Creation_Date__c)), of_Events_Launched__c&gt;=1, of_Events_Completed__c&gt;=1, of_Tickets_Sold__c=0),"Event Abandoned", 
IF( 
AND(NOT(ISBLANK(CTQ_Account_Creation_Date__c)), of_Events_Launched__c&gt;1, of_Events_Completed__c&gt;=1, of_Tickets_Sold__c&gt;=1),"Multi-Event User", 
IF( 
Last_CTQ_Status_Update_Date__c&lt; TODAY()-90,"Inactive User","" 
)))))))</formula>
        <label>CTQ User Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Website__c</fullName>
        <label>Event Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Facebook_URL__c</fullName>
        <label>Facebook URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Instagram_URL__c</fullName>
        <label>Instagram URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Last_CTQ_Status_Update_Date__c</fullName>
        <label>Last CTQ Status Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Newsletter_Opt_in__c</fullName>
        <label>Newsletter Opt-in</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Twitter_URL__c</fullName>
        <label>Twitter URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>of_Events_Cancelled__c</fullName>
        <label># of Events Cancelled</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Events_Completed__c</fullName>
        <label># of Events Completed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Events_Launched__c</fullName>
        <label># of Events Launched</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Tickets_Sold__c</fullName>
        <label># of Tickets Sold</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>To plugin CT quick data into Salesforce</description>
    <label>CT Quick</label>
    <nameField>
        <displayFormat>CTQ-{0000}</displayFormat>
        <label>CT Quick Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CT Quick</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>